--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pydantic_core==2.14.5
 PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
+runpod==1.3.0
 safetensors==0.4.1
 sentencepiece==0.1.99
 sniffio==1.3.0
